# AlgorithmPractice

./: CMakeLists.txt
UnitTest/: CMakeLists.txt  first_test.cpp  uTest.cpp
cmake/: ExAddGTest.cmake
lib/: CMakeLists.txt
lib/myAlgo/: CMakeLists.txt  myAlgo.h  test.cpp  test.h
